--- a/style.css
+++ b/style.css
@@ -2,11 +2,13 @@ header{
   text-align: center;
   font-family: 'Bungee Spice', cursive;
   font-size: 50px;
+  
 
 }
 
 nav{
  text-align: center;
+ 
  
  
  
@@ -22,11 +24,13 @@ nav a{
   font-size: 30px;
   color:orangered;
   font-family: 'Michroma', sans-serif;
+  box-shadow: 10px 5px 3px gray;
   
 }
 
 nav a:hover{
-  background-color: lightcoral;
+  background-color: orangered;
+  color: gray;
 }
 
 .sag{
@@ -57,6 +61,10 @@ border-radius: 30px;
 footer a{
   color: orangered;
   
+}
+
+footer:hover{
+  background-color: gray;
 }
 
 .iletisim{
